--- a/style/style.scss
+++ b/style/style.scss
@@ -27,6 +27,7 @@
 
 .home-content,
 .about-content {
+  color: #222831;
   height: 100%;
   display: flex;
   justify-content: space-evenly;
@@ -45,14 +46,20 @@
 .home {
   background-image: linear-gradient(
     to right,
-    #ff8177 0%,
-    #ff867a 0%,
-    #ff8c7f 21%,
-    #f99185 52%,
-    #cf556c 78%,
-    #b12a5b 100%
+    #ecebab 0%,
+    #beb188 21%,
+    #909987 52%,
+    #51625c 78%,
+    #243039 100%
   );
 }
 .about {
-  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+  background-image: linear-gradient(
+    to right,
+    #be957d 0%,
+    #ebdcc2 21%,
+    #69675a 52%,
+    #47424a 78%,
+    #2f2d31 100%
+  );
 }
